--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -29,8 +29,8 @@
         <td><%= employer.location %></td>
         <td><%= employer.status %></td>
         <%# <td>link_to 'Show', employer</td> %>
-        <td><%= link_to 'Edit', edit_employer_path(employer) %></td>
-        <td><%= link_to 'Delete', employer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_employer_path(employer),class:"btn btn-primary"%></td>
+        <td><%= link_to 'Delete', employer, method: :delete, data: { confirm: 'Are you sure?' } ,class:"btn btn-danger"%></td>
       </tr>
     <% end %>
   </tbody>
