--- a/app/views/employers/index.html.erb
+++ b/app/views/employers/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Employee List</h1>
 <br>
 
-<table class="table table-striped table-hover table-bordered ">
+<table class="table table-striped table-hover table-bordered " style="text-align:center">
   <thead class="table-dark">
     <tr>
       <th>Name</th>
